# zapocetGNU

./: skript.sh
C/: ErrorLog  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  configure.scan
C/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
C/include/: Makefile  Makefile.am  Makefile.in  processArguments.h
C/main/: Makefile  Makefile.am  Makefile.in  main.c  test.c
C/main/.deps/: main.Po
C/src/: Makefile  Makefile.am  Makefile.in  Mejkfajl  average.c  charToInt.c  charToInt.h  dzachistics  main.c  procArgs.c  procArgs.h  processArguments.c  roundoff.c  variance.c
C/src/.deps/: average.Po  main.Po  procArgs.Po  roundoff.Po  test.Po  variance.Po
C/zdroje/: Makefile  Makefile.am
C/zdroje/.deps/: processArguments.Po
data/: data1.txt
