AC_PREREQ([2.69])
AC_INIT([Dzachistics], [0.1], [lisjachy@fjfi.cvut.cz])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([gnu])
AC_USE_SYSTEM_EXTENSIONS
AC_SYS_LARGEFILE
AC_LANG([C])


AC_CONFIG_HEADERS([config.h])

AC_SEARCH_LIBS([pow], [m])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

AC_CONFIG_FILES([Makefile
		 src/Makefile])
AC_OUTPUT
